Issue #10951: Fix warnings in the socket module.